--- a/TopNotify.WWW/topnotify/index.html
+++ b/TopNotify.WWW/topnotify/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title></title>
+    <webscript name="frontend"></webscript>
   </head>
-  <body>
+  <body oncontextmenu="return false;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
