--- a/TopNotify.WWW/topnotify/index.html
+++ b/TopNotify.WWW/topnotify/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
     <webscript name="frontend"></webscript>
+    <style>
+      body {
+        background-color: transparent !important;
+      }
+    </style>
   </head>
   <body oncontextmenu="return false;">
     <div id="root"></div>
