--- a/TopNotify.WWW/topnotify/index.html
+++ b/TopNotify.WWW/topnotify/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
     <webscript name="frontend"></webscript>
+    <webscript name="win10support"></webscript>
     <style>
       body {
         background-color: transparent !important;
